2013-10-30  DJ Delorie  <dj@redhat.com>

	* config/rx/rx.c (ADD_RX_BUILTIN0): New macro, used for builtins
	that take no arguments.

2013-10-30  Joern Rennecke  <joern.rennecke@embecosm.com>

	PR other/58545
	* reload1.c (update_eliminables_and_spill): New function, broken
	out of reload.
	(reload): Use it.  Check for frame size change after frame
	size alignment, and call update_eliminables_and_spill first
	if continue-ing.

2013-10-30  Cong Hou  <congh@google.com>

	PR target/58762
	* config/i386/i386-protos.h (ix86_expand_sse2_abs): New function.
	* config/i386/i386.c (ix86_expand_sse2_abs): New function.
	* config/i386/sse.md: Add SSE2 support to abs (8/16/32-bit-int).

2013-10-18  Mikael Pettersson  <mikpelinux@gmail.com>

	PR rtl-optimization/58369
	* reload1.c (compute_reload_subreg_offset): New function.
	(choose_reload_regs): Use it to pass endian-correct
	offset to subreg_regno_offset.

2013-10-30  Tobias Burnus  <burnus@net-b.de>

	PR other/33426
	* gcc/tree-cfg.c (replace_loop_annotate): Replace warning by
	warning_at.

2013-10-30  Jason Merrill  <jason@redhat.com>

	* configure.ac (loose_warn): Add -Wno-format if
	--disable-build-format-warnings.

2013-10-30  David Malcolm  <dmalcolm@redhat.com>

	* cgraphunit.c (analyze_functions): Split symtab_node
	declarations onto multiple lines to make things easier
	for rename_symtab.py.

	* symtab.c (symtab_dissolve_same_comdat_group_list): Likewise.
	(symtab_semantically_equivalent_p): Likewise.

2013-10-30  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/58784
	* lra.c (check_rtl): Remove address check before LRA work.

2013-10-30  Marc Glisse  <marc.glisse@inria.fr>

	* tree-ssa-alias.c (ao_ref_init_from_ptr_and_size): Look for a
	POINTER_PLUS_EXPR in the defining statement.

2013-10-30  Vladimir Makarov  <vmakarov@redhat.com>

	* regmove.c: Remove.
	* tree-pass.h (make_pass_regmove): Remove.
	* timevar.def (TV_REGMOVE): Remove.
	* passes.def (pass_regmove): Remove.