@@ -1,3 +1,13 @@
+2013-10-30  Sharad Singhai  <singhai@google.com>
+
+	PR middle-end/58134
+	* opts.c (common_handle_option): Remove deprecated option
+	-ftree-vectorizer-verbose.
+	* doc/invoke.texi (Debugging Options): Ditto.
+	* opts-global.c (handle_common_deferred_options): Ditto.
+	(dump_remap_tree_vectorizer_verbose): Delete.
+	* common.opt: Set -ftree-vectorizer-verbose as an ignored option.
+
 2013-10-30  DJ Delorie  <dj@redhat.com>
 
 	* config/rx/rx.c (ADD_RX_BUILTIN0): New macro, used for builtins
